<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>site.pplee</groupId>
    <artifactId>Jcode</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>ai</module>
        <module>ai-providers</module>
        <module>agent-core</module>
        <module>coding-agent</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <lombok.version>1.18.46</lombok.version>
        <jackson.version>2.18.2</jackson.version>
        <junit.version>5.11.4</junit.version>
        <maven.surefire.version>3.5.2</maven.surefire.version>
        <maven.enforcer.version>3.5.0</maven.enforcer.version>
        <!-- Jcode-internal artifacts (versioned from the reactor) -->
        <jcode.ai.version>${project.version}</jcode.ai.version>
        <jcode.ai-providers.version>${project.version}</jcode.ai-providers.version>
        <jcode.agent-core.version>${project.version}</jcode.agent-core.version>
        <jcode.coding-agent.version>${project.version}</jcode.coding-agent.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--
              Jcode-internal modules. Child modules reference these artifacts
              without repeating reactor versions. Each child POM owns its
              module-specific dependency-boundary rule.
            -->
            <dependency>
                <groupId>site.pplee</groupId>
                <artifactId>ai</artifactId>
                <version>${jcode.ai.version}</version>
            </dependency>
            <dependency>
                <groupId>site.pplee</groupId>
                <artifactId>ai-providers</artifactId>
                <version>${jcode.ai-providers.version}</version>
            </dependency>
            <dependency>
                <groupId>site.pplee</groupId>
                <artifactId>agent-core</artifactId>
                <version>${jcode.agent-core.version}</version>
            </dependency>
            <dependency>
                <groupId>site.pplee</groupId>
                <artifactId>coding-agent</artifactId>
                <version>${jcode.coding-agent.version}</version>
            </dependency>
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.15.0</version>
                    <configuration>
                        <release>${maven.compiler.release}</release>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>${maven.enforcer.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <!--
          Module-boundary guards are declared by each child because allowed
          internal dependencies differ by layer. Plugin versions stay managed
          here; no child may skip its boundary execution.
        -->
    </build>

</project>